[project]
name = "langgraph-agent-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.75.0",
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "flagembedding>=1.3.5",
    "httpx>=0.28.1",
    "huggingface-hub[hf-xet]>=0.36.2",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.0",
    "redis[hiredis]>=7.2.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
